creating escript db_clone
Change-Id: Ib0a2f8f5e9978584a690f62036abed0572fef22f

--- a/CloneTools/Makefile
+++ b/CloneTools/Makefile
@@ -21,6 +21,9 @@ compile: ebin/$(PROJECT).app
 		| sed 's/{modules, \[\]}/{modules, \[$(MODULES)\]}/' \
 		> ebin/$(PROJECT).app
 	-@$(MAKE) ebin/$(PROJECT).app
+	@./escriptize -d ebin -o db_clone
+	@chmod +x db_clone
+	@echo "\n\tdb_clone successfuly created\n"
 
 ebin/$(PROJECT).app: src/*.erl
 	@mkdir -p ebin/
